--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "netflix-clone",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Samuel da Silva",
   "license": "MIT",
   "devDependencies": {
     "tailwindcss": "^3.4.1"
