--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "netflix-clone",
   "version": "1.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "./scripts/index/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watch": "npx tailwindcss -i ./styles/base.css -o ./styles/tailwind.css --watch "
   },
   "keywords": [],
   "author": "Samuel da Silva",
