--- a/package.json
+++ b/package.json
@@ -1,15 +1,26 @@
 {
-  "name": "netflix-clone",
-  "version": "1.0.1",
-  "description": "",
-  "main": "./scripts/index/main.js",
-  "scripts": {
-    "watch": "npx tailwindcss -i ./styles/base.css -o ./styles/tailwind.css --watch "
-  },
-  "keywords": [],
-  "author": "Samuel da Silva",
-  "license": "MIT",
-  "devDependencies": {
-    "tailwindcss": "^3.4.1"
-  }
+      "name": "nome-do-projeto",
+      "version": "1.0.0",
+      "description": "",
+      "main": "./src/scripts/main.js",
+      "scripts": {
+            "build": "webpack --config webpack.config.js",
+            "watch": "webpack --watch"
+      },
+      "keywords": [],
+      "author": "",
+      "license": "MIT",
+      "dependencies": {
+            "css-loader": "^7.1.2",
+            "jquery": "^3.7.1",
+            "mini-css-extract-plugin": "^2.9.0",
+            "postcss": "^8.4.38",
+            "postcss-loader": "^8.1.1",
+            "tailwindcss": "^3.4.3",
+            "webpack": "^5.91.0",
+            "webpack-cli": "^5.1.4"
+      },
+      "devDependencies": {
+            "html-webpack-plugin": "^5.6.0"
+      }
 }
